--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: doc
 
 website:
-  title: "website"
+  title: "website_experiment"
   navbar:
     left:
       - href: index.qmd
