add a blog section

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,9 @@ website:
     left:
       - href: index.qmd
         text: Home
+    right:
       - about.qmd
+      - blog.qmd
 
 format:
   html:
